Fixed Latitude and Polar region errors

--- a/AstroHelper.ipynb
+++ b/AstroHelper.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,13 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getStarted():\n",
-
     "    WelcomeMessage = \"\"\"Welcome to the AstroHelper! This code is still in experimental mode! This is a short introduction to the code with all the relevant data. First of all, you will need to define your observation location. To do this, please define the variables `Lon` (Longitude in degrees), `Lat` (Latitude in degrees), `ele` (elevation in metres) as well as the observations date in format `\"YYYY-MM-DD\"` and your timezone with `\"Europe/Berlin\"` (watch out! you need quotation marks due to the date and timezone being a string). If you have your coordinates in any other format please us the helper functions below to transform to degrees! Next call the function `TelescopeData` and input the necessary parameters of your telescope so that other functions work! If there is a typo in the variable names or if you just want to experiment with the standard values, the geographic location used without input is the Dr. Remeis Observatory in Bamberg, Germany as the seat of the astronomical institute of the Friedrich-Alexander University Erlangen-Nuremberg with data of Lon: 10.88846, Lat: 49.88474, ele: 282 (°, °, m).\n",
     "    \n",
     "    Now let's get to business. Below is a list of all relevant functions and a short description. We wish you a lot of fun using the code!\n",
@@ -73,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,20 +701,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Altitude maximal if ra_deg = ERA + Lambda\n",
     "\n",
-    "def min_zenith_distance(dec_deg: float) -> float:\n",
+    "def min_zenith_distance(dec_deg: float, Lat: float) -> float:\n",
     "    \"\"\" Calculates the minimal zenith distance using the declination.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
     "    dec_deg : float\n",
     "        Declination in degrees\n",
-    "\n",
+    "    Lat : float\n",
+    "        Latitude of the observation point in degrees\n",
     "    Returns\n",
     "    -------\n",
     "    float\n",
@@ -735,13 +734,15 @@
     "        z = zenith_distance(H_EX_2)\n",
     "    return z\n",
     "\n",
-    "def min_zenith_filter(data_FOV: np.ndarray, baseline: float = 40) -> np.ndarray:\n",
+    "def min_zenith_filter(data_FOV: np.ndarray,Lat: float, baseline: float = 40) -> np.ndarray:\n",
     "    \"\"\" This function filters objects by their minimal zenith distance. Filters out all Objects which never reach an Alltitude of atleast 90 - `baseline`.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
     "    data_FOV : np.ndarray\n",
     "        array of objects in the FOV\n",
+    "    Lat : float\n",
+    "        Latitude of the observation point in degrees\n",
     "    baseline : float, optional\n",
     "        minimal zenith distance, by default 40\n",
     "\n",
@@ -753,7 +754,7 @@
     "    min_zen_dis = []\n",
     "\n",
     "    for n in range(len(data_FOV[:,1])):\n",
-    "        z = min_zenith_distance(float(data_FOV[n,2]))\n",
+    "        z = min_zenith_distance(float(data_FOV[n,2]), Lat)\n",
     "        min_zen_dis.append(z)\n",
     "    Z_s = np.array(min_zen_dis)\n",
     "\n",
@@ -777,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,25 +822,29 @@
     "    start_time = start_time_utc.to_datetime(timezone=tz)\n",
     "    end_time = end_time_utc.to_datetime(timezone=tz)\n",
     "\n",
-    "    delta_T = (end_time - start_time).total_seconds() / (24 * 3600)\n",
-    "    p = int(delta_T*1440 + 1)\n",
+    "    if isinstance(start_time - end_time, type(end_time-start_time)):\n",
+    "        return None\n",
     "\n",
-    "    T = np.linspace(0, delta_T, p) \n",
+    "    else:\n",
+    "        delta_T = (end_time - start_time).total_seconds() / (24 * 3600)\n",
+    "        p = int(delta_T*1440 + 1)\n",
     "\n",
-    "    utc_time = start_time.astimezone(pytz.utc)\n",
-    "    Time_Night = Time(utc_time).jd\n",
-    "    Time_Night_T = Time_Night + T\n",
+    "        T = np.linspace(0, delta_T, p) \n",
     "\n",
-    "    keep = []\n",
-    "    more_del=[]\n",
+    "        utc_time = start_time.astimezone(pytz.utc)\n",
+    "        Time_Night = Time(utc_time).jd\n",
+    "        Time_Night_T = Time_Night + T\n",
     "\n",
-    "    for n in range(len(data[:,0])):\n",
-    "        if np.sum((Az_Alt(Time_Night_T,float(data[n,1]), float(data[n, 2])))[1] > Altitude_Threshold) >=Time_Threshold:\n",
-    "            keep.append(n) \n",
-    "        else: \n",
-    "            more_del.append(n)\n",
+    "        keep = []\n",
+    "        more_del=[]\n",
     "\n",
-    "    return np.delete(data,more_del,0)"
+    "        for n in range(len(data[:,0])):\n",
+    "            if np.sum((Az_Alt(Time_Night_T,float(data[n,1]), float(data[n, 2]), Lon, Lat))[1] > Altitude_Threshold) >=Time_Threshold:\n",
+    "                keep.append(n) \n",
+    "            else: \n",
+    "                more_del.append(n)\n",
+    "\n",
+    "        return np.delete(data,more_del,0)"
    ]
   },
   {
@@ -851,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,26 +897,30 @@
     "    start_time = start_time_utc.to_datetime(timezone=tz)\n",
     "    end_time = end_time_utc.to_datetime(timezone=tz)\n",
     "\n",
-    "    delta_T = (end_time - start_time).total_seconds() / (24 * 3600)\n",
-    "    p = int(delta_T*1440 + 1)\n",
-    "\n",
-    "    T = np.linspace(0, delta_T, p)\n",
+    "    if isinstance(start_time - end_time, type(end_time-start_time)):\n",
+    "        return None\n",
     "    \n",
-    "    utc_time = start_time.astimezone(pytz.utc)\n",
-    "    Time_Night = Time(utc_time).jd\n",
-    "    Time_Night_T = Time_Night + T\n",
-    "    data_m = []\n",
-    "    for n in range(len(data[:,0])):\n",
-    "        N = np.sum((Az_Alt(Time_Night_T, float(data[n, 1]), float(data[n, 2])))[1] > Altitude_Threshold)\n",
-    "        data_m.append(N) \n",
+    "    else:\n",
+    "        delta_T = (end_time - start_time).total_seconds() / (24 * 3600)\n",
+    "        p = int(delta_T*1440 + 1)\n",
     "\n",
-    "    data_m_arr = np.array(data_m, dtype = float)\n",
-    "    return np.append(data, data_m_arr[:, None], axis=1)"
+    "        T = np.linspace(0, delta_T, p)\n",
+    "        \n",
+    "        utc_time = start_time.astimezone(pytz.utc)\n",
+    "        Time_Night = Time(utc_time).jd\n",
+    "        Time_Night_T = Time_Night + T\n",
+    "        data_m = []\n",
+    "        for n in range(len(data[:,0])):\n",
+    "            N = np.sum((Az_Alt(Time_Night_T, float(data[n, 1]), float(data[n, 2]), Lon, Lat))[1] > Altitude_Threshold)\n",
+    "            data_m.append(N) \n",
+    "\n",
+    "        data_m_arr = np.array(data_m, dtype = float)\n",
+    "        return np.append(data, data_m_arr[:, None], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,16 +931,20 @@
     "        objects_filtered = objects\n",
     "    objects_filtered = Surface_Brightness(objects_filtered)\n",
     "    objects_filtered = ratio(objects_filtered, min_frac, Remove_NaN)\n",
-    "    objects_filtered = min_zenith_filter(objects_filtered, 40)\n",
+    "    objects_filtered = min_zenith_filter(objects_filtered,Lat, 40)\n",
     "    objects_filtered = time_over_x_filter(objects_filtered, obs_date, timezone, Lon, Lat, ele, Altitude_Threshold, Time_Threshold)\n",
-    "    objects_filtered = time_over_x(objects_filtered, obs_date, timezone, Lon, Lat, ele, Altitude_Threshold)\n",
-    "    objects_filtered = np.array(sorted(objects_filtered, key=lambda x: ( float(x[-1]), float(x[4])), reverse=True),dtype = object)\n",
-    "    return objects_filtered"
+    "    if objects_filtered is None:\n",
+    "        print(\"No night time\")\n",
+    "        return None\n",
+    "    else:\n",
+    "        objects_filtered = time_over_x(objects_filtered, obs_date, timezone, Lon, Lat, ele, Altitude_Threshold)\n",
+    "        objects_filtered = np.array(sorted(objects_filtered, key=lambda x: ( float(x[-1]), float(x[4])), reverse=True),dtype = object)\n",
+    "        return objects_filtered"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,7 +1023,7 @@
     "    plt.ion()  # Enable interactive mode\n",
     "\n",
     "    for n in range(k):\n",
-    "        H, a = Az_Alt(Time_Night_T, float(data[n, 1]), float(data[n, 2]))[1], Az_Alt(Time_Night_T, float(data[n, 1]), float(data[n, 2]))[0]\n",
+    "        H, a = Az_Alt(Time_Night_T, float(data[n, 1]), float(data[n, 2]), Lon, Lat)[1], Az_Alt(Time_Night_T, float(data[n, 1]), float(data[n, 2]), Lon, Lat)[0]\n",
     "        A = [x + 360 if x < 0 else x for x in a]\n",
     "\n",
     "        # Create new figure for each object\n",
@@ -1072,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,7 +1152,7 @@
     "            alpha = 1  # Teilweise transparent für die anderen\n",
     "            label = None  # Kein Label für die anderen\n",
     "\n",
-    "        A, H = Az_Alt(time_frame, float(data[n, 1]), float(data[n, 2]))\n",
+    "        A, H = Az_Alt(time_frame, float(data[n, 1]), float(data[n, 2]), Lon, Lat)\n",
     "        norm = Normalize(vmin=start_jd, vmax=end_jd)\n",
     "        \n",
     "        # Scatter plot für Punkte\n",
@@ -1204,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1251,7 @@
     "    if object_idx is not None:\n",
     "        for n in range(365):\n",
     "            Day = Zeit_start + day_arr + n\n",
-    "            H_object = (Az_Alt(Day, float(data_arr[object_idx, 1]), float(data_arr[object_idx, 2])))[1]\n",
+    "            H_object = (Az_Alt(Day, float(data_arr[object_idx, 1]), float(data_arr[object_idx, 2]), Lon, Lat))[1]\n",
     "            max_time_loop = np.argmax(H_object)\n",
     "            max_loop = np.max(H_object)\n",
     "            max_height.append(max_loop)\n",
@@ -1298,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1425,7 +1438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1494,16 +1507,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
     "def PlotBestObjects(objects: np.ndarray, obs_date: str, timezone: str, Lon: float, Lat: float, ele: float, min_frac: float = 0.08, Altitude_Threshold: float = 30, Time_Threshold: float = 120, Only_Galaxies: bool = 0, k: int = 10, colored: int = 5, Altitude_Reference: float = 30, Remove_NaN: bool = 1):\n",
     "    print(\"Welcome to the function calculating and plotting the best objects for your location!\")\n",
     "    final_best = Final_Best(objects, obs_date, timezone, Lon, Lat, ele, min_frac, Altitude_Threshold, Time_Threshold, Only_Galaxies, Remove_NaN)\n",
-    "    PathViewer(final_best, obs_date, timezone, Lon, Lat, ele, k, colored)\n",
-    "    AdvancedViewer(final_best, obs_date, timezone, Lon, Lat, ele, k, Altitude_Reference)\n",
-    "    print(\"Well done, this function is now over!\")"
+    "    if final_best is None:\n",
+    "        return None\n",
+    "    else:\n",
+    "        PathViewer(final_best, obs_date, timezone, Lon, Lat, ele, k, colored)\n",
+    "        AdvancedViewer(final_best, obs_date, timezone, Lon, Lat, ele, k, Altitude_Reference)\n",
+    "        print(\"Well done, this function is now over!\")"
    ]
   },
   {
@@ -1517,19 +1533,34 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "No night time\n",
+      "Welcome to the function calculating and plotting the best objects for your location!\n",
+      "No night time\n"
+     ]
+    }
+   ],
    "source": [
-    "Lon = 18.47540\n",
-    "Lat = 24.35714\n",
+    "Lon = dms_to_deg(12,00,57)\n",
+    "Lat = dms_to_deg(48,40,54)\n",
     "ele = 450\n",
     "\n",
-    "TelescopeData(1624, 2.4, 5496, 3672)\n",
+    "print(Lat)\n",
     "\n",
-    "selected_date = \"2025-03-08\"\n",
+    "#TelescopeData(1624, 2.4, 5496, 3672)\n",
+    "TelescopeData()\n",
+    "\n",
+    "\n",
+    "selected_date = \"2025-03-26\"\n",
     "timezone = \"Europe/Berlin\"\n",
     "\n",
-    "final_best = Final_Best(data_arr, obs_date=selected_date, timezone=timezone, Lon=Lon, ele=ele, min_frac=0.2, Only_Galaxies = 1)\n",
-    "PlotBestObjects(objects=final_best, obs_date=selected_date, timezone=timezone, Lon=Lon, Lat=Lat, ele=ele, k = 6, Only_Galaxies = 1)"
+    "final_best = Final_Best(data_arr, obs_date=selected_date, timezone=timezone, Lon=Lon, Lat=Lat, ele=ele, min_frac=0.08, Only_Galaxies = 1)\n",
+    "PlotBestObjects(objects=data_arr, obs_date=selected_date, timezone=timezone, Lon=Lon, Lat=Lat, ele=ele, min_frac=0.08, k = 6 , Only_Galaxies = 1)"
    ]
   }
  ],
