--- a/AstroHelper.ipynb
+++ b/AstroHelper.ipynb
@@ -554,11 +554,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def TelescopeData(FocalLength: float = 750, PixelSize: int = 4.30, x_Pixels: int = 5184, y_Pixels: int = 3456):\n",
+    "def TelescopeData(FocalLength: float = 750, PixelSize: int = 4.30, x_Pixels: int = 5184, y_Pixels: int = 3456) -> None:\n",
     "    \"\"\"\n",
     "    This function takes your telescope data and saves it as a global variable. To omit using this function you can just declare the following variables:\n",
     "    ```\n",
@@ -613,7 +613,20 @@
     "    return (206.2648 * (Ps/fl) * L)/60\n",
     "\n",
     "\n",
-    "def safe_convert(val):\n",
+    "def safe_convert(val: any) -> float:\n",
+    "    \"\"\"\n",
+    "    This function tries to convert a value to a float. If it fails, it returns NaN.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    val : any\n",
+    "        Value to be converted\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    float\n",
+    "        value as float or NaN\n",
+    "    \"\"\"\n",
     "    try:\n",
     "        return float(val)\n",
     "    except ValueError:\n",
@@ -913,11 +926,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Final_Best(objects: np.ndarray, obs_date: str, timezone, Lon: float = 10.88846, Lat: float = 49.88474, ele: float = 282, min_frac: float = 0.08, max_frac: float = 1, Altitude_Threshold: float = 30, Time_Threshold: float = 120, Galaxies: bool = 0, Nebulae: bool = 0,Supernovae_remnants: bool = 0, Clusters: bool = 0, Stars: bool = 0, All: bool = 0, Remove_NaN: bool = 1):\n",
+    "def Final_Best(objects: np.ndarray, obs_date: str, timezone, Lon: float = 10.88846, Lat: float = 49.88474, ele: float = 282, min_frac: float = 0.08, max_frac: float = 1, Altitude_Threshold: float = 30, Time_Threshold: float = 120, Galaxies: bool = 0, Nebulae: bool = 0,Supernovae_remnants: bool = 0, Clusters: bool = 0, Stars: bool = 0, All: bool = 0, Remove_NaN: bool = 1) -> np.ndarray:\n",
     "    \"\"\"\n",
     "    This function takes in an array of objects with SIMBAD data, filters for morphological type, calculates surface brightness, ratio, filters for minimal zenith distance, time over altitude and sorts from best to worst.\n",
     "\n",
@@ -979,11 +992,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def AdvancedViewer(data: np.ndarray, obs_date: str, timezone: str, Lon: float = 10.88846, Lat: float = 49.88474, ele: float = 282, k: int = 10, Altitude_Reference: float = 30):\n",
+    "def AdvancedViewer(data: np.ndarray, obs_date: str, timezone: str, Lon: float = 10.88846, Lat: float = 49.88474, ele: float = 282, k: int = 10, Altitude_Reference: float = 30) -> None:\n",
     "    \"\"\"\n",
     "    This functions plots three diagrams for each object: 1. a time-altitude diagram, 2. a time-azimuth and 3. size in FOV. The ratio of the diagonals (object:FOV) is displayed in percent.\n",
     "    \n",
@@ -1129,11 +1142,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def PathViewer(data: np.ndarray, obs_date: str, timezone: str, Lon: float = 10.88846, Lat: float = 49.88474, ele: float = 282, k: int = 10, colored: int = 5):\n",
+    "def PathViewer(data: np.ndarray, obs_date: str, timezone: str, Lon: float = 10.88846, Lat: float = 49.88474, ele: float = 282, k: int = 10, colored: int = 5) -> None:\n",
     "    \"\"\"\n",
     "    This function plots the paths of the objects from `data` onto a stereographic projection of the sky. The paths of the five best objects are coloured, the rest ist b/w. The start and end time are defined by variables `start_time` and `end_time`.\n",
     "\n",
@@ -1256,19 +1269,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def TimeViewer(object_name: str,timezone: str = \"Europe/Berlin\",AbsoluteTime: bool = 1 ,Lon: float = 10.88846, Lat: float = 49.88474, ele: float = 282, Altitude_Threshold: float = 30):\n",
+    "def TimeViewer(object_name: str, timezone: str = \"Europe/Berlin\", AbsoluteTime: bool = 1, Lon: float = 10.88846, Lat: float = 49.88474, ele: float = 282, Altitude_Threshold: float = 30) -> None:\n",
     "    \"\"\"\n",
     "    This function plots the maximal altitude and the time of it with respect to the day of the year. The flat lines of the maximal time are data points beyond the 18:00 and 06:00 border.\n",
     "\n",
     "    Parameters\n",
     "    ----------\n",
-    "    objects_name: str, Name of the object to be observed in form of `\"M101\"`. Watch out for spelling and capital letters, else it may fail.\n",
-    "    timezone: str, optional\n",
-    "        your timezone in format `\"Europe/Berlin\"`, by default \"Europe/Berlin\"  \n",
+    "    object_name : str\n",
+    "        Name of the object to be observed in form of `\"M101\"`. Watch out for spelling and capital letters, else it may fail.\n",
+    "    timezone : str, optional\n",
+    "        your timezone in format `\"Europe/Berlin\"`, by default \"Europe/Berlin\"\n",
+    "    AbsoluteTime : bool, optional\n",
+    "        if True gives amount of time abov 30° in minutes, if False gives it in percentage, by default 1\n",
+    "    Lon : float, optional\n",
+    "        Longitude of observation point, by default 10.88846 (Dr. Remeis Observatory)\n",
+    "    Lat : float, optional\n",
+    "        Latitude of observation point, by default 49.88474 (Dr. Remeis Observatory)\n",
+    "    ele : float, optional\n",
+    "        elevation of observation point, by default 282 (Dr. Remeis Observatory)\n",
+    "    Altitude_Threshold : float, optional\n",
+    "        Minimum altitude the object must rise above, by default 30\n",
     "    \"\"\"\n",
     "\n",
     "    cest_tz = pytz.timezone(\"Europe/Berlin\")\n",
@@ -1385,11 +1409,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mapping(objects: list):\n",
+    "def mapping(objects: list) -> None:\n",
     "    \"\"\"\n",
     "    This function plots objects on a Right ascension in hours (0 - 24) and declination (-90° - 90°).\n",
     "\n",
@@ -1397,7 +1421,6 @@
     "    ----------\n",
     "    objects : list\n",
     "        List of objects to be plotted\n",
-    "    \n",
     "    \"\"\"\n",
     "    frame = inspect.currentframe().f_back\n",
     "    possible_names = [name for name, val in frame.f_globals.items() if val is objects]\n",
@@ -1418,8 +1441,7 @@
     "            color = colors[n], \n",
     "            label = objects[n, 0] if n < 10 else \"\"  \n",
     "        )\n",
-    "\n",
-    "\n",
+    "        \n",
     "    ax.set_xlim(0,360)\n",
     "    ax.set_ylim(-90,90)\n",
     "    ax.grid()\n",
@@ -1510,11 +1532,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def color_map(data: np.ndarray, t: float, resolution: float):\n",
+    "def color_map(data: np.ndarray, t: float, resolution: float) -> None:\n",
     "    \"\"\"Function that takes arrays with position (RA,DEC) and \"time above 30° Alt\"(t30) values. And plots them in a colormap. Also plots a contour line for a specifiable t30 t.\n",
     "\n",
     "    Parameters\n",
@@ -1577,11 +1599,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def PlotBestObjects(objects: np.ndarray, obs_date: str, timezone: str, Lon: float = 10.88846, Lat: float = 49.88474, ele: float = 282, min_frac: float = 0.08, max_frac: float = 1, Altitude_Threshold: float = 30, Time_Threshold: float = 120, Galaxies: bool = 0, Nebulae: bool = 0,Supernovae_remnants:bool = 0, Clusters: bool = 0, Stars: bool = 0, All: bool = 0, k: int = 10, colored: int = 5, Altitude_Reference: float = 30, Remove_NaN: bool = 1):\n",
+    "def PlotBestObjects(objects: np.ndarray, obs_date: str, timezone: str, Lon: float = 10.88846, Lat: float = 49.88474, ele: float = 282, min_frac: float = 0.08, max_frac: float = 1, Altitude_Threshold: float = 30, Time_Threshold: float = 120, Galaxies: bool = 0, Nebulae: bool = 0,Supernovae_remnants:bool = 0, Clusters: bool = 0, Stars: bool = 0, All: bool = 0, k: int = 10, colored: int = 5, Altitude_Reference: float = 30, Remove_NaN: bool = 1) -> None:\n",
     "    \"\"\"\n",
     "    Function that calculates the best objects for your location and plots them.\n",
     "    \n",
@@ -1948,7 +1970,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
