Convert Time defined outside of TimeViewer

--- a/AstroHelper.ipynb
+++ b/AstroHelper.ipynb
@@ -1269,7 +1269,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_time(value: float) -> str:\n",
+    "    \"\"\"\n",
+    "    This function converts a time value to a 24-hour format string.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    value : float\n",
+    "        time value\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    str\n",
+    "        time in HH:MM format\n",
+    "    \"\"\"    \n",
+    "    hours = (value + 18) % 24\n",
+    "    return f\"{int(hours):02d}:00\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,14 +1378,6 @@
     "    max_time_arr = np.array(max_time)\n",
     "    time_over_30_arr = np.array(time_over_30_list)\n",
     "    Night_time_arr = np.array(Night_time)\n",
-    "\n",
-    "    # print(max_time_arr)\n",
-    "    # print(time_over_30_arr[0])\n",
-    "\n",
-    "    def convert_time(value):\n",
-    "        \"\"\"Converts time (0-12) to 18:00-6:00 format.\"\"\"\n",
-    "        hours = (value + 18) % 24\n",
-    "        return f\"{int(hours):02d}:00\"\n",
     "\n",
     "    month_labels = [calendar.month_name[i] for i in range(1, 13)]\n",
     "    # Plotting\n",
