--- a/AstroHelper.ipynb
+++ b/AstroHelper.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1387,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1481,10 +1481,6 @@
     "\n",
     "    return points\n",
     "\n",
-    "# Example: Generate 1000 points\n",
-    "n = 1000\n",
-    "grid_points = generate_grid(n)\n",
-    "\n",
     "\n",
     "def add_column_of_ones(array: np.ndarray) -> np.ndarray:\n",
     "    \"\"\"\n",
@@ -1503,16 +1499,12 @@
     "    n = array.shape[0]  # Number of rows\n",
     "    ones_column = np.ones((n, 1))  # Create a (n,1) column of ones\n",
     "    new_array = np.hstack((ones_column, array))  # Prepend ones column\n",
-    "    return new_array\n",
-    "\n",
-    "# grid_points_one = add_column_of_ones(grid_points)\n",
-    "\n",
-    "# grid_wto_30 = time_over_x(grid_points_one, 30)"
+    "    return new_array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1579,7 +1571,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def GradientMap(t: float, resolution: int, obs_date: str, timezone: str, Lon: float = 10.88846, Lat: float = 49.88474, ele: float = 282, Altitude_Threshold: float = 30):\n",
+    "    \"\"\"\n",
+    "    Create a gradient map from the input data.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    t : float\n",
+    "        minutes-hurdle for the contour line.\n",
+    "    resolution : int\n",
+    "        The resolution of the output map.\n",
+    "    obs_date : str\n",
+    "        The date of observation in the format \"YYYY-MM-DD\".\n",
+    "    timezone : str\n",
+    "        The timezone of the observation location in the format \"Europe/Berlin\".\n",
+    "    Lon : float, optional\n",
+    "        Longitude of the observation location, by default 10.88846 (Dr. Remeis Observatory)\n",
+    "    Lat : float, optional\n",
+    "        Latitude of the observation location, by default 49.88474 (Dr. Remeis Observatory)\n",
+    "    ele : float, optional\n",
+    "        Elevation of the observation location, by default 282 (Dr. Remeis Observatory)\n",
+    "    Altitude_Threshold : float, optional\n",
+    "        Minimum altitude the object must rise above, by default 30\n",
+    "    Returns\n",
+    "    -------\n",
+    "    np.ndarray\n",
+    "        The generated gradient map.\n",
+    "    \"\"\"\n",
+    "    grid_points = generate_grid(resolution)\n",
+    "    grid_points_one = add_column_of_ones(grid_points)\n",
+    "    grid_wto_30 = time_over_x(grid_points_one, obs_date, timezone, Lon, Lat, ele, Altitude_Threshold)\n",
+    "    color_map(grid_wto_30, t, resolution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1651,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
